feat: améliorations UX - boutons, curseurs et images
- Agrandissement des images solutions (Particuliers/Professionnels) de 30%
- Ajout variant vert pour boutons 'Être rappelé' sur l'accueil
- Augmentation de la taille des boutons CTA (Hero, Header, Mobile)
- Correction du curseur pointer sur tous les éléments cliquables
- Intégration email notifications (Nodemailer avec Gmail SMTP)
- Ajout CallbackModal sur page de résultat simulation
- Amélioration contraste boutons selon contexte (noir sur clair, blanc sur foncé)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
@@ -35,6 +36,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/html2canvas": "^0.5.35",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
