--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/crypto-js": "^4.2.2",
     "@types/html2canvas": "^0.5.35",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
